cmd/cli/kubectl-kyverno/_testdata/tests/test-4/generatedLimitRange.yaml
apiVersion: v1
kind: LimitRange
metadata:
  name: default-limitrange
  namespace: hello-world-namespace
spec:
  limits:
    - default:
        cpu: 500m
        memory: 1Gi
      defaultRequest:
        cpu: 200m
        memory: 256Mi
      type: Container
