cmd/cli/kubectl-kyverno/_testdata/tests/test-4/generatedResourceQuota.yaml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: default-resourcequota
  namespace: hello-world-namespace
spec:
  hard:
    requests.cpu: '4'
    requests.memory: '16Gi'
    limits.cpu: '4'
    limits.memory: '16Gi'
