cmd/cli/kubectl-kyverno/_testdata/tests/test-4/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-quota-gpol
policies:
- policy.yaml
resources:
- resource.yaml
results:
- generatedResources:
  - generatedLimitRange.yaml
  - generatedResourceQuota.yaml
  isGeneratingPolicy: true
  kind: Namespace
  policy: add-ns-quota
  resources:
  - hello-world-namespace
  result: pass
